tests/snapshots/cli_help__cli_help_daemon.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Start, stop or check the background daemon that talks to Microsoft

Usage: ms-todo daemon [OPTIONS] <COMMAND>

Commands:
  start      Start the daemon if it isn't running, and wait until it's ready
  stop       Stop the daemon and wait until its process has exited
  status     Show whether the daemon is running, its PID, version and socket
  restart    Stop the daemon if it's running, then start it again
  install    Start the daemon at login, so nags fire without opening ms-todo
  uninstall  Stop starting the daemon at login: remove what `install` wrote
  logs       Print the daemon's log
  help       Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
